# xjy

./: .env.example  .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
coverage_lib/: tarpaulin-report.html
docs/: project-structure.md  tech-stack.md
docs/pow/: pow-solver-browser.js  pow-solver-browser.ts  pow-solver-fast.ts
src/: error.rs  lib.rs  main.rs  response.rs
src/config/: auth.rs  database.rs  email.rs  jwt.rs  mod.rs  rate_limit.rs  redis.rs
src/handlers/: admin.rs  auth.rs  bookmark.rs  comment.rs  follow.rs  forum.rs  mod.rs  notification.rs  post.rs  pow.rs  report.rs  tag.rs  upload.rs  user.rs  vote.rs
src/middleware/: auth.rs  mod.rs  security.rs
src/migration/: m20240101_000001_create_users_table.rs  m20240101_000002_create_forums_table.rs  m20240101_000003_create_posts_table.rs  m20240101_000004_create_comments_table.rs  m20240101_000005_create_votes_table.rs  m20240101_000006_add_comment_parent_index.rs  m20240101_000007_add_search_index.rs  m20240101_000008_create_notifications_table.rs  m20240101_000009_create_reports_table.rs  m20240101_000010_add_hidden_columns.rs  m20240101_000011_add_email_verification.rs  m20240101_000012_create_bookmarks_table.rs  m20240101_000013_create_follows_table.rs  m20240101_000014_create_tags_tables.rs  m20240101_000015_add_password_reset.rs  m20240101_000016_create_refresh_tokens.rs  m20240101_000017_add_performance_indexes.rs  m20260219_000001_create_user_points_ledger.rs  mod.rs
src/models/: bookmark.rs  mod.rs  (+12 more)
tests/: admin_test.rs  auth_test.rs  bookmark_test.rs  comment_test.rs  comment_vote_test.rs  follow_test.rs  forum_test.rs  integration_test.rs  moderation_test.rs  notification_test.rs  post_test.rs  pow_test.rs  report_test.rs  tag_test.rs  user_test.rs  vote_test.rs
(+29 files in other folders)
